--- a/compare_rainfall_to_climatology.ipynb
+++ b/compare_rainfall_to_climatology.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "editable": false,
     "hide_input": true,
@@ -21,7 +21,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4bd8b10e80174d72840366f7ff18b845",
+       "model_id": "5d259d04cbff4de58495dbfb80909e87",
        "version_major": 2,
        "version_minor": 0
       },
@@ -35,7 +35,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f08ff3c5c83421384ee1ba6d526b127",
+       "model_id": "98043492c6744231831189ae194663b7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -49,7 +49,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e64c6ef989da4947aab4fc0f0324a72b",
+       "model_id": "9254e84c214d4c4baadf58dd0a595ce3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -63,7 +63,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d36aa8058c994f6e8d9ef0f0f31826d3",
+       "model_id": "e2eabf690e5c4062b2c9ec80623ec187",
        "version_major": 2,
        "version_minor": 0
       },
@@ -77,7 +77,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9dbda8efeb54b0ab52477012dc13834",
+       "model_id": "a39cba58a7ae4d4888cc9e0ddc2a259a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -91,7 +91,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8dad425fcfcb482db186254ed5ddf002",
+       "model_id": "3f9f95156ec94f2395502dc8e1ae7ebd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -105,7 +105,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b949ecdb722e4d40be98e67ae047570b",
+       "model_id": "ac3dc71924ca4d9d94a0c009a0b07b08",
        "version_major": 2,
        "version_minor": 0
       },
@@ -148,6 +148,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Initialization Cell",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
