--- a/IUKColombia.ipynb
+++ b/IUKColombia.ipynb
@@ -74,7 +74,7 @@
     "def get_data_from_datacube(product, subproduct, start, end,\n",
     "                           latitude, longitude):\n",
     "\n",
-    "    keyfile = os.path.join(os.path.expanduser(\"~\"), '.assimila_dq')\n",
+    "    keyfile = os.path.join(os.path.expanduser(\"~\"), 'assimila_dq.txt')\n",
     "    \n",
     "    ds = Dataset(product=product, subproduct=subproduct,\n",
     "                 key_file=keyfile)\n",
