moving IUK files into separate directory

--- a/IUKColombia/temperature.ipynb
+++ b/IUKColombia/temperature.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "hide_input": true,
     "init_cell": true
@@ -11,7 +11,7 @@
    "source": [
     "import os\n",
     "import sys\n",
-    "sys.path.append(\"helpers\")\n",
+    "sys.path.append(os.path.join(os.path.expanduser(\"~\"), \"datacube_jupyter_notebooks/\"))\n",
     "import helpers.helpers as helpers\n",
     "\n",
     "from DQTools.dataset import Dataset\n",
@@ -35,14 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "hide_input": true,
     "init_cell": true
    },
    "outputs": [],
    "source": [
-    "farms = pd.read_csv('data/WeatherStationsFarms.csv', header=1)\n",
+    "farms = pd.read_csv('../data/WeatherStationsFarms.csv', header=1)\n",
     "\n",
     "farms_subset = farms[['STATION_ID','FARMER NAME']]\n",
     "farms_subset_list = farms_subset.values.tolist()"
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "hide_input": true,
     "init_cell": true
@@ -107,7 +107,7 @@
     "    Get data for a particular station\n",
     "    \"\"\"\n",
     "    fname = f'{station}_averages.csv'\n",
-    "    fname = os.path.join('data', fname)\n",
+    "    fname = os.path.join('../data', fname)\n",
     "    \n",
     "    try:\n",
     "        data = pd.read_csv(fname)\n",
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "hide_input": true,
     "init_cell": true,
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "hide_input": true,
     "init_cell": true,
@@ -307,7 +307,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7248c5253aa34e26b2c96586fdb037f8",
+       "model_id": "60c7c57477ea438e907770158a179a93",
        "version_major": 2,
        "version_minor": 0
       },
