If requested dates not in cube use best avaiable

--- a/peatlands_extract_csv_from_datacube.ipynb
+++ b/peatlands_extract_csv_from_datacube.ipynb
@@ -15,9 +15,17 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/prise/.conda/envs/dc_1.0/lib/python3.7/site-packages/xarray/core/merge.py:17: FutureWarning: The Panel class is removed from pandas. Accessing it from the top-level namespace will also be removed in the next version\n",
+      "  PANDAS_TYPES = (pd.Series, pd.DataFrame, pd.Panel)\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e744b4d94b324fc7aad720318b5e9e69",
+       "model_id": "9eb8831c89ef47cebb13ada0f9d439bc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -31,7 +39,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "840611c8bc424018836b9871e3af4ed0",
+       "model_id": "262d68727d904c6a9496e6ea436d337c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -45,7 +53,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9431e4b127594a1dac406d3ec4e0e004",
+       "model_id": "36304d4f58dd4f1f9302e08bca7da030",
        "version_major": 2,
        "version_minor": 0
       },
@@ -59,7 +67,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f09475a9a3a4551be1d14e8d16a067e",
+       "model_id": "459258163d3e4cea88adc81e05899daf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -73,7 +81,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "069cc690e28145048d38d64aca198ad5",
+       "model_id": "cc0bfdf49d5b4e108bab8b304a30366c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -87,7 +95,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5471f3c396ec45cfaaa2e0fa3a34f45d",
+       "model_id": "e4446507480543bf9eb65cd6d145c9ff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -101,7 +109,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5dcef465006a4d81aa70459314a30e5c",
+       "model_id": "7439a7ae925442f994c2e19cde1d8f70",
        "version_major": 2,
        "version_minor": 0
       },
@@ -115,7 +123,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1047bd0dc4ee41cfbc74dc05332e4e10",
+       "model_id": "21885d190da54053b5bc5f22c292ba66",
        "version_major": 2,
        "version_minor": 0
       },
@@ -129,7 +137,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eafa53334a1c40719cf0333f8f8eeca7",
+       "model_id": "1181068479ee477d8bbb159e18a2e566",
        "version_major": 2,
        "version_minor": 0
       },
@@ -143,7 +151,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d9d4d978c76841d38ecc81b3c0de281f",
+       "model_id": "ecd7c27c316044cf828e38affebb1d91",
        "version_major": 2,
        "version_minor": 0
       },
