make cells not editable

--- a/peatlands_extract_csv_from_datacube.ipynb
+++ b/peatlands_extract_csv_from_datacube.ipynb
@@ -2,22 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hide_input": false
+   },
    "source": [
-    "#  Extracting a timeseries from the data cube and storing as a CSV"
+    "# Get Time Series for the Data Cube"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
-    "scrolled": false
+    "editable": false,
+    "hide_input": true,
+    "init_cell": true
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "53d34c70995746a6b2598c56b7bbe047",
+       "model_id": "eb7cc435ff4a461a906fc4025e032b5e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -31,7 +35,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d81a6e91c39f4c8eba2a9678f5d3e1d1",
+       "model_id": "2d6022ab7b2d4101864c19410b623a82",
        "version_major": 2,
        "version_minor": 0
       },
@@ -45,7 +49,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3ae68f4b4e724b4b90074cd9156cadbd",
+       "model_id": "663b455a2a2042faaf12b14834cbf623",
        "version_major": 2,
        "version_minor": 0
       },
@@ -59,7 +63,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c9be98a97bf40dab73d94f08674c8f6",
+       "model_id": "91a0088bd07846b7ae5a9314a2f281e5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -73,7 +77,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66deb23923b245978ff4bb83684c4566",
+       "model_id": "0ee1caa5b95e4f00bc566cb4f0db6603",
        "version_major": 2,
        "version_minor": 0
       },
@@ -87,7 +91,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1abda8ea83a4e5a89237e39bb3b5faf",
+       "model_id": "6c84249857db462991333986a97931a4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -101,7 +105,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ce63a800d384c2a9dd8be277f154786",
+       "model_id": "1fa3fae59fad4dd7b32bb6da943e01ef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -115,7 +119,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7757c50661d3434bb9889e1203052a85",
+       "model_id": "0d5fea17c314477c8fc3ed8a996fbb35",
        "version_major": 2,
        "version_minor": 0
       },
@@ -129,7 +133,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "490b8b7ef319484ab581be7024d68140",
+       "model_id": "d18a0922ddc047809f83a13c9526b96f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -143,7 +147,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea25c9a4f8be4d208c4cef92d88e6520",
+       "model_id": "9921151dad0e49ec8b5141fc53b3d9c1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -197,12 +201,14 @@
     "projection.observe(update)\n",
     "\n",
     "wid.display_widget([product, subproduct, projection, y, x, start, end, button])\n",
-    "out = wid.display_output()"
+    "out = wid.display_output()\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": false
+   },
    "source": [
     "## Available MODIS products:\n",
     "\n",
@@ -239,11 +245,19 @@
     "  - __White sky albedo__ for each band\n",
     "  - __Black sky albedo__ for each band\n",
     "  - __Quality indicators__\n",
-    "    - need interpretation"
+    "    - need interpretation\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -260,19 +274,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
-  },
-  "toc": {
-   "base_numbering": 1,
-   "nav_menu": {},
-   "number_sections": false,
-   "sideBar": false,
-   "skip_h1_title": false,
-   "title_cell": "Table of Contents",
-   "title_sidebar": "Contents",
-   "toc_cell": false,
-   "toc_position": {},
-   "toc_section_display": false,
-   "toc_window_display": false
   }
  },
  "nbformat": 4,
