--- a/peatlands_compare_bounding_box_for_2_time_steps.ipynb
+++ b/peatlands_compare_bounding_box_for_2_time_steps.ipynb
@@ -9,8 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
+    "editable": false,
     "hide_input": true,
     "init_cell": true,
     "scrolled": false
@@ -19,7 +20,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a122b39d28d14af8885dad3e700c450c",
+       "model_id": "29394695bce44a7a8ae7f88a33224204",
        "version_major": 2,
        "version_minor": 0
       },
@@ -33,7 +34,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62cafdf13ee74bc6937fb14593828e31",
+       "model_id": "8f0ffb62aef54fbaa496c8fb725d52eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -47,7 +48,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d0df3dced71d4704baa75eb8929b1641",
+       "model_id": "4ada7553d31544eebf65584d53db1e01",
        "version_major": 2,
        "version_minor": 0
       },
