Dataset object in peatlands_helpers inherits keyfile from general notebook helpers

--- a/peatlands_extract_csv_from_datacube.ipynb
+++ b/peatlands_extract_csv_from_datacube.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "hide_input": false
+    "hide_input": true
    },
    "source": [
     "# Get Time Series for the Data Cube"
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "editable": false,
     "hide_input": true,
@@ -21,7 +21,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb7cc435ff4a461a906fc4025e032b5e",
+       "model_id": "77688bd2d1f24f4da8b52b14d6b401cc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -35,7 +35,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d6022ab7b2d4101864c19410b623a82",
+       "model_id": "ce13eba442714941948d669fbd340888",
        "version_major": 2,
        "version_minor": 0
       },
@@ -49,7 +49,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "663b455a2a2042faaf12b14834cbf623",
+       "model_id": "f20a313d6bab4d7c85457239b536e100",
        "version_major": 2,
        "version_minor": 0
       },
@@ -63,7 +63,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "91a0088bd07846b7ae5a9314a2f281e5",
+       "model_id": "b17d021f74f64c0697b1d39c58713445",
        "version_major": 2,
        "version_minor": 0
       },
@@ -77,7 +77,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ee1caa5b95e4f00bc566cb4f0db6603",
+       "model_id": "080ca6deead6454f83f68e590b86352a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -91,7 +91,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c84249857db462991333986a97931a4",
+       "model_id": "ed34b401ef3d4768811fb85555b16a69",
        "version_major": 2,
        "version_minor": 0
       },
@@ -105,7 +105,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1fa3fae59fad4dd7b32bb6da943e01ef",
+       "model_id": "3574d34627bc450fa0cb7b0b00ca1c07",
        "version_major": 2,
        "version_minor": 0
       },
@@ -119,7 +119,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d5fea17c314477c8fc3ed8a996fbb35",
+       "model_id": "19d00ccba23d4052af3cef922dca0089",
        "version_major": 2,
        "version_minor": 0
       },
@@ -133,7 +133,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d18a0922ddc047809f83a13c9526b96f",
+       "model_id": "f986061474844eb8ab501271cf8c6557",
        "version_major": 2,
        "version_minor": 0
       },
@@ -147,7 +147,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9921151dad0e49ec8b5141fc53b3d9c1",
+       "model_id": "c6d3d3d433634f98a768529bba7a178e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -257,7 +257,6 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
