reverse x and y widget order, more natural to have easting first

--- a/peatlands_extract_csv_from_datacube.ipynb
+++ b/peatlands_extract_csv_from_datacube.ipynb
@@ -13,7 +13,6 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "editable": false,
     "hide_input": true,
     "init_cell": true
    },
@@ -21,7 +20,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb7cc435ff4a461a906fc4025e032b5e",
+       "model_id": "0500a12283d74a37a04c0838481996cb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -35,12 +34,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d6022ab7b2d4101864c19410b623a82",
+       "model_id": "c8ed75ab1616425cb493879e4c2b32ba",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Dropdown(description='Product:', layout=Layout(height='30px', width='400px'), options=('chirps', 'tamsat', 'er…"
+       "Dropdown(description='Product:', layout=Layout(height='30px', width='400px'), options=('MOD11A1', 'MOD13A2', '…"
       ]
      },
      "metadata": {},
@@ -49,12 +48,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "663b455a2a2042faaf12b14834cbf623",
+       "model_id": "4c9306f15f294481aa7f33fe889b272b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Dropdown(description='Subproduct:', layout=Layout(height='30px', width='400px'), options=('rfe',), value='rfe'…"
+       "Dropdown(description='Subproduct:', layout=Layout(height='30px', width='400px'), options=('LST_Day_1km', 'Day_…"
       ]
      },
      "metadata": {},
@@ -63,7 +62,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "91a0088bd07846b7ae5a9314a2f281e5",
+       "model_id": "b79625191ee248429b28383fa95ff026",
        "version_major": 2,
        "version_minor": 0
       },
@@ -77,21 +76,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ee1caa5b95e4f00bc566cb4f0db6603",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "BoundedFloatText(value=7.5, description='Latitude (y)', layout=Layout(height='30px', width='400px'), max=90.0,…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c84249857db462991333986a97931a4",
+       "model_id": "38356f9e585f4da48f2b12fc91b59793",
        "version_major": 2,
        "version_minor": 0
       },
@@ -105,7 +90,21 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1fa3fae59fad4dd7b32bb6da943e01ef",
+       "model_id": "355888aee2c34986bcc258fc1397b17e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "BoundedFloatText(value=7.5, description='Latitude (y)', layout=Layout(height='30px', width='400px'), max=90.0,…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6638eca839da471d8475d30b9981ec5c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -119,7 +118,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d5fea17c314477c8fc3ed8a996fbb35",
+       "model_id": "5015e9c7ef82465883d21d77242ea35c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -133,7 +132,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d18a0922ddc047809f83a13c9526b96f",
+       "model_id": "e9ac8ffbebed4d92aea1284e221136e7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -147,7 +146,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9921151dad0e49ec8b5141fc53b3d9c1",
+       "model_id": "2b6b561830d3400e8541dd32d1c1faed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -200,7 +199,7 @@
     "product.observe(update)\n",
     "projection.observe(update)\n",
     "\n",
-    "wid.display_widget([product, subproduct, projection, y, x, start, end, button])\n",
+    "wid.display_widget([product, subproduct, projection, x, y, start, end, button])\n",
     "out = wid.display_output()\n"
    ]
   },
