add text about MODIS products

--- a/peatlands_compare_bounding_box_for_2_time_steps.ipynb
+++ b/peatlands_compare_bounding_box_for_2_time_steps.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "editable": false,
     "hide_input": true,
@@ -20,7 +20,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "29394695bce44a7a8ae7f88a33224204",
+       "model_id": "d84a1d79dc7943eeaa4ea9d7c6080368",
        "version_major": 2,
        "version_minor": 0
       },
@@ -34,7 +34,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f0ffb62aef54fbaa496c8fb725d52eb",
+       "model_id": "b549b81ce18f49bdb1eee77f04ab03a6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -48,7 +48,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ada7553d31544eebf65584d53db1e01",
+       "model_id": "6759338cc7924d8c85693edce5e79e04",
        "version_major": 2,
        "version_minor": 0
       },
@@ -166,11 +166,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Available MODIS products:\n",
+    "\n",
+    "  - __MOD11A1 - Land surface temperature__\n",
+    "  - __MOD13A2 - Vegetation indices__\n",
+    "  - __MCD43A3 - Albedo__\n",
+    "\n",
+    "\n",
+    "## MOD11A1 - Land surface temperature\n",
+    "Daily, 1km resolution\n",
+    "  - Day and night __land surface temperature__ (LST_Day_1km, LST_night_1km)\n",
+    "\n",
+    "Also:\n",
+    " - __Quality control flags__ (day and night).\n",
+    "   - These need interperating before using.\n",
+    " - Day and night __view time__.\n",
+    " - Day and night __view angle__.\n",
+    " - __Clear sky coverage__ (day/night).\n",
+    " - __Emissivity__ (band 31 and 32)\n",
+    "\n",
+    "\n",
+    "## MOD13A2 - Vegetation indices\n",
+    "Every 16 days, 1 km resolution\n",
+    "  - Vegetation indices: __NDVI__, __EVI__\n",
+    "\n",
+    "Also:\n",
+    "  - Vegetation index __quality indicators__\n",
+    "  - __Reflectance__ for red, NIR, blue and MIR bands\n",
+    "  - Viewing and sun angles: __view zenith__, __sun zenith__ and __relative azimuth__\n",
+    "  - __Pixel reliability__\n",
+    "\n",
+    "## MCD43A3 - Albedo\n",
+    "Daily, 500 m resolution\n",
+    "  - __White sky albedo__ for each band\n",
+    "  - __Black sky albedo__ for each band\n",
+    "  - __Quality indicators__\n",
+    "    - need interpretation\n"
+   ]
   },
   {
    "cell_type": "code",
