Add Assimila branding

--- a/peatlands_compare_bounding_box_for_2_time_steps.ipynb
+++ b/peatlands_compare_bounding_box_for_2_time_steps.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![Assimila logo](logosmall.png \"Assimila\")\n",
+    "# Assimila Peatlands Demonstrator\n",
     "# Compare bounding box for 2 time steps"
    ]
   },
@@ -20,7 +22,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d84a1d79dc7943eeaa4ea9d7c6080368",
+       "model_id": "f5b683c845c94e1fb825d872081375c0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -34,7 +36,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b549b81ce18f49bdb1eee77f04ab03a6",
+       "model_id": "6eca72a41cb94a42b3efca5519504ec6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -48,7 +50,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6759338cc7924d8c85693edce5e79e04",
+       "model_id": "c2eb1f6417b04860bd4fcf92713d14f9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -208,11 +210,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "![Assimila logo](logosmall.png \"Assimila\")"
+   ]
   }
  ],
  "metadata": {
