--- a/peatlands_extract_csv_from_datacube.ipynb
+++ b/peatlands_extract_csv_from_datacube.ipynb
@@ -6,7 +6,10 @@
     "hide_input": true
    },
    "source": [
-    "# Get Time Series for the Data Cube"
+    "![Assimila logo](logosmall.png \"Assimila\")\n",
+    "# Assimila Peatlands Demonstrator\n",
+    "\n",
+    "# Get Time Series from the Data Cube"
    ]
   },
   {
@@ -20,7 +23,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0500a12283d74a37a04c0838481996cb",
+       "model_id": "731dcac432bf4219b394980b65b88b8a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -34,7 +37,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c8ed75ab1616425cb493879e4c2b32ba",
+       "model_id": "a13ddd038782494b96dfeb0cfe6c3c89",
        "version_major": 2,
        "version_minor": 0
       },
@@ -48,7 +51,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4c9306f15f294481aa7f33fe889b272b",
+       "model_id": "a97a9175c46d4424b768cbb572d71832",
        "version_major": 2,
        "version_minor": 0
       },
@@ -62,7 +65,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b79625191ee248429b28383fa95ff026",
+       "model_id": "22e97a5c76d14801876e7e97ea5d1465",
        "version_major": 2,
        "version_minor": 0
       },
@@ -76,7 +79,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38356f9e585f4da48f2b12fc91b59793",
+       "model_id": "ac2603d9fb324dfa880a464fb0a0118f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -90,7 +93,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "355888aee2c34986bcc258fc1397b17e",
+       "model_id": "bd20c6c0644e4b4aafa076fee88ecf22",
        "version_major": 2,
        "version_minor": 0
       },
@@ -104,7 +107,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6638eca839da471d8475d30b9981ec5c",
+       "model_id": "dfd2f43575c346c1849911282a0f6649",
        "version_major": 2,
        "version_minor": 0
       },
@@ -118,7 +121,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5015e9c7ef82465883d21d77242ea35c",
+       "model_id": "93d08b025c2244288b673a8036fd6118",
        "version_major": 2,
        "version_minor": 0
       },
@@ -132,7 +135,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9ac8ffbebed4d92aea1284e221136e7",
+       "model_id": "6267bf51a9804374a9ac90e77efe2ab2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -146,7 +149,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b6b561830d3400e8541dd32d1c1faed",
+       "model_id": "42c41681bb55415e983793198ec9cbac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -245,6 +248,13 @@
     "  - __Black sky albedo__ for each band\n",
     "  - __Quality indicators__\n",
     "    - need interpretation\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Assimila logo](logosmall.png \"Assimila\")"
    ]
   },
   {
